--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -1,6 +1,6 @@
 :plugin: s3
-:type: output
-:default_codec: line
+:type: input
+:default_codec: plain
 
 ///////////////////////////////////////////
 START - GENERATED VARIABLES, DO NOT EDIT!
@@ -15,62 +15,21 @@ END - GENERATED VARIABLES, DO NOT EDIT!
 
 [id="plugins-{type}s-{plugin}"]
 
-=== S3 output plugin
+=== S3 input plugin
 
 include::{include_path}/plugin_header.asciidoc[]
 
 ==== Description
 
-INFORMATION:
+Stream events from files from a S3 bucket.
 
-This plugin batches and uploads logstash events into Amazon Simple Storage Service (Amazon S3).
+Each line from each file generates an event.
+Files ending in `.gz` are handled as gzip'ed files.
 
-Requirements:
-* Amazon S3 Bucket and S3 Access Permissions (Typically access_key_id and secret_access_key)
-* S3 PutObject permission
-
-S3 outputs create temporary files into the OS' temporary directory, you can specify where to save them using the `temporary_directory` option.
-
-S3 output files have the following format
-
-ls.s3.312bc026-2f5d-49bc-ae9f-5940cf4ad9a6.2013-04-18T10.00.tag_hello.part0.txt
-
-
-|=======
-| ls.s3 | indicate logstash plugin s3 |
-| 312bc026-2f5d-49bc-ae9f-5940cf4ad9a6 | a new, random uuid per file. |
-| 2013-04-18T10.00 | represents the time whenever you specify time_file. |
-| tag_hello | this indicates the event's tag. |
-| part0 | this means if you indicate size_file then it will generate more parts if your file.size > size_file. When a file is full it will be pushed to the bucket and then deleted from the temporary directory. If a file is empty, it is simply deleted.  Empty files will not be pushed |
-|=======
-
-Crash Recovery:
-* This plugin will recover and upload temporary log files after crash/abnormal termination when using `restore` set to true
-
-
-
-
-
-
-
-#### Usage:
-This is an example of logstash config:
-[source,ruby]
-output {
-   s3{
-     access_key_id => "crazy_key"             (optional)
-     secret_access_key => "monkey_access_key" (optional)
-     region => "eu-west-1"                    (optional, default = "us-east-1")
-     bucket => "your_bucket"                  (required)
-     size_file => 2048                        (optional) - Bytes
-     time_file => 5                           (optional) - Minutes
-     codec => "plain"                         (optional)
-     canned_acl => "private"                  (optional. Options are "private", "public-read", "public-read-write", "authenticated-read", "aws-exec-read", "bucket-owner-read", "bucket-owner-full-control", "log-delivery-write". Defaults to "private" )
-   }
-
+Files that are archived to AWS Glacier will be skipped.
 
 [id="plugins-{type}s-{plugin}-options"]
-==== S3 Output Configuration Options
+==== S3 Input Configuration Options
 
 This plugin supports the following configuration options plus the <<plugins-{type}s-{plugin}-common-options>> described later.
 
@@ -80,34 +39,29 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 | <<plugins-{type}s-{plugin}-access_key_id>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-additional_settings>> |<<hash,hash>>|No
 | <<plugins-{type}s-{plugin}-aws_credentials_file>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-backup_add_prefix>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-backup_to_bucket>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-backup_to_dir>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-bucket>> |<<string,string>>|Yes
-| <<plugins-{type}s-{plugin}-canned_acl>> |<<string,string>>, one of `["private", "public-read", "public-read-write", "authenticated-read", "aws-exec-read", "bucket-owner-read", "bucket-owner-full-control", "log-delivery-write"]`|No
-| <<plugins-{type}s-{plugin}-encoding>> |<<string,string>>, one of `["none", "gzip"]`|No
+| <<plugins-{type}s-{plugin}-delete>> |<<boolean,boolean>>|No
 | <<plugins-{type}s-{plugin}-endpoint>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-exclude_pattern>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-include_object_properties>> |<<boolean,boolean>>|No
+| <<plugins-{type}s-{plugin}-interval>> |<<number,number>>|No
 | <<plugins-{type}s-{plugin}-prefix>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-proxy_uri>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-region>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-restore>> |<<boolean,boolean>>|No
 | <<plugins-{type}s-{plugin}-role_arn>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-role_session_name>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-rotation_strategy>> |<<string,string>>, one of `["size_and_time", "size", "time"]`|No
 | <<plugins-{type}s-{plugin}-secret_access_key>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-server_side_encryption>> |<<boolean,boolean>>|No
-| <<plugins-{type}s-{plugin}-server_side_encryption_algorithm>> |<<string,string>>, one of `["AES256", "aws:kms"]`|No
 | <<plugins-{type}s-{plugin}-session_token>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-signature_version>> |<<string,string>>, one of `["v2", "v4"]`|No
-| <<plugins-{type}s-{plugin}-size_file>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-ssekms_key_id>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-storage_class>> |<<string,string>>, one of `["STANDARD", "REDUCED_REDUNDANCY", "STANDARD_IA"]`|No
+| <<plugins-{type}s-{plugin}-sincedb_path>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-temporary_directory>> |<<string,string>>|No
-| <<plugins-{type}s-{plugin}-time_file>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-upload_queue_size>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-upload_workers_count>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-validate_credentials_on_root_bucket>> |<<boolean,boolean>>|No
+| <<plugins-{type}s-{plugin}-watch_for_new_files>> |<<boolean,boolean>>|No
 |=======================================================================
 
 Also see <<plugins-{type}s-{plugin}-common-options>> for a list of options supported by all
-output plugins.
+input plugins.
 
 &nbsp;
 
@@ -124,29 +78,6 @@ This plugin uses the AWS SDK and supports several ways to get credentials, which
 3. Environment variables `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`
 4. Environment variables `AMAZON_ACCESS_KEY_ID` and `AMAZON_SECRET_ACCESS_KEY`
 5. IAM Instance Profile (available when running inside EC2)
-
-[id="plugins-{type}s-{plugin}-additional_settings"]
-===== `additional_settings`
-
-  * Value type is <<hash,hash>>
-  * Default value is `{}`
-
-Key-value pairs of settings and corresponding values used to parametrize
-the connection to S3. See full list in https://docs.aws.amazon.com/sdkforruby/api/Aws/S3/Client.html[the AWS SDK documentation]. Example:
-
-[source,ruby]
-    output {
-      s3 {
-        access_key_id => "1234",
-        secret_access_key => "secret",
-        region => "eu-west-1",
-        bucket => "logstash-test",
-        additional_settings => {
-          "force_path_style" => true,
-          "follow_redirects" => false
-        }
-      }
-    }
 
 [id="plugins-{type}s-{plugin}-aws_credentials_file"]
 ===== `aws_credentials_file` 
@@ -166,6 +97,32 @@ file should look like this:
 ----------------------------------
 
 
+[id="plugins-{type}s-{plugin}-backup_add_prefix"]
+===== `backup_add_prefix` 
+
+  * Value type is <<string,string>>
+  * Default value is `nil`
+
+Append a prefix to the key (full path including file name in s3) after processing.
+If backing up to another (or the same) bucket, this effectively lets you
+choose a new 'folder' to place the files in
+
+[id="plugins-{type}s-{plugin}-backup_to_bucket"]
+===== `backup_to_bucket` 
+
+  * Value type is <<string,string>>
+  * Default value is `nil`
+
+Name of a S3 bucket to backup processed files to.
+
+[id="plugins-{type}s-{plugin}-backup_to_dir"]
+===== `backup_to_dir` 
+
+  * Value type is <<string,string>>
+  * Default value is `nil`
+
+Path of a local directory to backup processed files to.
+
 [id="plugins-{type}s-{plugin}-bucket"]
 ===== `bucket` 
 
@@ -173,23 +130,15 @@ file should look like this:
   * Value type is <<string,string>>
   * There is no default value for this setting.
 
-S3 bucket
+The name of the S3 bucket.
 
-[id="plugins-{type}s-{plugin}-canned_acl"]
-===== `canned_acl` 
+[id="plugins-{type}s-{plugin}-delete"]
+===== `delete` 
 
-  * Value can be any of: `private`, `public-read`, `public-read-write`, `authenticated-read`, `aws-exec-read`, `bucket-owner-read`, `bucket-owner-full-control`, `log-delivery-write`
-  * Default value is `"private"`
+  * Value type is <<boolean,boolean>>
+  * Default value is `false`
 
-The S3 canned ACL to use when putting the file. Defaults to "private".
-
-[id="plugins-{type}s-{plugin}-encoding"]
-===== `encoding` 
-
-  * Value can be any of: `none`, `gzip`
-  * Default value is `"none"`
-
-Specify the content encoding. Supports ("gzip"). Defaults to "none"
+Whether to delete processed files from the original bucket.
 
 [id="plugins-{type}s-{plugin}-endpoint"]
 ===== `endpoint`
@@ -201,16 +150,61 @@ The endpoint to connect to. By default it is constructed using the value of `reg
 This is useful when connecting to S3 compatible services, but beware that these aren't
 guaranteed to work correctly with the AWS SDK.
 
+[id="plugins-{type}s-{plugin}-exclude_pattern"]
+===== `exclude_pattern` 
+
+  * Value type is <<string,string>>
+  * Default value is `nil`
+
+Ruby style regexp of keys to exclude from the bucket
+
+[id="plugins-{type}s-{plugin}-additional_settings"]
+===== `additional_settings`
+
+  * Value type is <<hash,hash>>
+  * Default value is `{}`
+
+Key-value pairs of settings and corresponding values used to parametrize
+the connection to s3. See full list in https://docs.aws.amazon.com/sdkforruby/api/Aws/S3/Client.html[the AWS SDK documentation]. Example:
+
+[source,ruby]
+    input {
+      s3 {
+        "access_key_id" => "1234"
+        "secret_access_key" => "secret"
+        "bucket" => "logstash-test"
+        "additional_settings" => {
+          "force_path_style" => true
+          "follow_redirects" => false
+        }
+      }
+    }
+
+[id="plugins-{type}s-{plugin}-include_object_properties"]
+===== `include_object_properties`
+
+  * Value type is <<boolean,boolean>>
+  * Default value is `false`
+
+Whether or not to include the S3 object's properties (last_modified, content_type, metadata) into each Event at
+`[@metadata][s3]`. Regardless of this setting, `[@metdata][s3][key]` will always be present.
+
+[id="plugins-{type}s-{plugin}-interval"]
+===== `interval` 
+
+  * Value type is <<number,number>>
+  * Default value is `60`
+
+Interval to wait between to check the file list again after a run is finished.
+Value is in seconds.
+
 [id="plugins-{type}s-{plugin}-prefix"]
 ===== `prefix` 
 
   * Value type is <<string,string>>
-  * Default value is `""`
+  * Default value is `nil`
 
-Specify a prefix to the uploaded filename, this can simulate directories on S3.  Prefix does not require leading slash.
-This option supports logstash interpolation: https://www.elastic.co/guide/en/logstash/current/event-dependent-configuration.html#sprintf;
-for example, files can be prefixed with the event date using `prefix = "%{+YYYY}/%{+MM}/%{+dd}"`.
-Be warned this can created a lot of temporary local files.
+If specified, the prefix of filenames in the bucket must match (not a regexp)
 
 [id="plugins-{type}s-{plugin}-proxy_uri"]
 ===== `proxy_uri` 
@@ -227,12 +221,6 @@ URI to proxy server if required
   * Default value is `"us-east-1"`
 
 The AWS Region
-
-[id="plugins-{type}s-{plugin}-restore"]
-===== `restore` 
-
-  * Value type is <<boolean,boolean>>
-  * Default value is `true`
 
 [id="plugins-{type}s-{plugin}-role_arn"]
 ===== `role_arn`
@@ -252,15 +240,6 @@ See the https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html[
 
 Session name to use when assuming an IAM role.
 
-[id="plugins-{type}s-{plugin}-rotation_strategy"]
-===== `rotation_strategy` 
-
-  * Value can be any of: `size_and_time`, `size`, `time`
-  * Default value is `"size_and_time"`
-
-Define the strategy to use to decide when we need to rotate the file and push it to S3,
-The default strategy is to check for both size and time, the first one to match will rotate the file.
-
 [id="plugins-{type}s-{plugin}-secret_access_key"]
 ===== `secret_access_key` 
 
@@ -268,22 +247,6 @@ The default strategy is to check for both size and time, the first one to match 
   * There is no default value for this setting.
 
 The AWS Secret Access Key
-
-[id="plugins-{type}s-{plugin}-server_side_encryption"]
-===== `server_side_encryption` 
-
-  * Value type is <<boolean,boolean>>
-  * Default value is `false`
-
-Specifies whether or not to use S3's server side encryption. Defaults to no encryption.
-
-[id="plugins-{type}s-{plugin}-server_side_encryption_algorithm"]
-===== `server_side_encryption_algorithm` 
-
-  * Value can be any of: `AES256`, `aws:kms`
-  * Default value is `"AES256"`
-
-Specifies what type of encryption to use when SSE is enabled.
 
 [id="plugins-{type}s-{plugin}-session_token"]
 ===== `session_token` 
@@ -293,44 +256,17 @@ Specifies what type of encryption to use when SSE is enabled.
 
 The AWS Session token for temporary credential
 
-[id="plugins-{type}s-{plugin}-signature_version"]
-===== `signature_version` 
-
-  * Value can be any of: `v2`, `v4`
-  * There is no default value for this setting.
-
-The version of the S3 signature hash to use. Normally uses the internal client default, can be explicitly
-specified here
-
-[id="plugins-{type}s-{plugin}-size_file"]
-===== `size_file` 
-
-  * Value type is <<number,number>>
-  * Default value is `5242880`
-
-Set the size of file in bytes, this means that files on bucket when have dimension > file_size, they are stored in two or more file.
-If you have tags then it will generate a specific size file for every tags
-
-[id="plugins-{type}s-{plugin}-ssekms_key_id"]
-===== `ssekms_key_id` 
+[id="plugins-{type}s-{plugin}-sincedb_path"]
+===== `sincedb_path` 
 
   * Value type is <<string,string>>
-  * There is no default value for this setting.
+  * Default value is `nil`
 
-The key to use when specified along with server_side_encryption => aws:kms.
-If server_side_encryption => aws:kms is set but this is not default KMS key is used.
-http://docs.aws.amazon.com/AmazonS3/latest/dev/UsingKMSEncryption.html
+Where to write the since database (keeps track of the date
+the last handled file was added to S3). The default will write
+sincedb files to in the directory '{path.data}/plugins/inputs/s3/'
 
-[id="plugins-{type}s-{plugin}-storage_class"]
-===== `storage_class` 
-
-  * Value can be any of: `STANDARD`, `REDUCED_REDUNDANCY`, `STANDARD_IA`
-  * Default value is `"STANDARD"`
-
-Specifies what S3 storage class to use when uploading the file.
-More information about the different storage classes can be found:
-http://docs.aws.amazon.com/AmazonS3/latest/dev/storage-class-intro.html
-Defaults to STANDARD.
+If specified, this setting must be a filename path and not just a directory.
 
 [id="plugins-{type}s-{plugin}-temporary_directory"]
 ===== `temporary_directory` 
@@ -338,46 +274,16 @@ Defaults to STANDARD.
   * Value type is <<string,string>>
   * Default value is `"/tmp/logstash"`
 
-Set the directory where logstash will store the tmp files before sending it to S3
-default to the current OS temporary directory in linux /tmp/logstash
+Set the directory where logstash will store the tmp files before processing them.
 
-[id="plugins-{type}s-{plugin}-time_file"]
-===== `time_file` 
-
-  * Value type is <<number,number>>
-  * Default value is `15`
-
-Set the time, in MINUTES, to close the current sub_time_section of bucket.
-If you define file_size you have a number of files in consideration of the section and the current tag.
-0 stay all time on listerner, beware if you specific 0 and size_file 0, because you will not put the file on bucket,
-for now the only thing this plugin can do is to put the file when logstash restart.
-
-[id="plugins-{type}s-{plugin}-upload_queue_size"]
-===== `upload_queue_size` 
-
-  * Value type is <<number,number>>
-  * Default value is `4`
-
-Number of items we can keep in the local queue before uploading them
-
-[id="plugins-{type}s-{plugin}-upload_workers_count"]
-===== `upload_workers_count` 
-
-  * Value type is <<number,number>>
-  * Default value is `4`
-
-Specify how many workers to use to upload the files to S3
-
-[id="plugins-{type}s-{plugin}-validate_credentials_on_root_bucket"]
-===== `validate_credentials_on_root_bucket` 
+[id="plugins-{type}s-{plugin}-watch_for_new_files"]
+===== `watch_for_new_files`
 
   * Value type is <<boolean,boolean>>
   * Default value is `true`
 
-The common use case is to define permission on the root bucket and give Logstash full access to write its logs.
-In some circonstances you need finer grained permission on subfolder, this allow you to disable the check at startup.
-
-
+Whether or not to watch for new files.
+Disabling this option causes the input to close itself after processing the files from a single listing.
 
 [id="plugins-{type}s-{plugin}-common-options"]
 include::{include_path}/{type}.asciidoc[]
